Add board editor and revamped game setup UI
Introduce a BoardEditorDialog for creating/editing custom board positions (piece palette, erase, side-to-move, validation for both kings). Overhaul GameSetup with a new themed UI: player pills (Human/AI), difficulty pills (including custom depth), preset/custom time controls, toggle switch, and new public accessors; replaces the old simple dialog and spinner layout. Table: add "Edit Position…" menu item and openBoardEditor() to load edited boards and reset UI/state; minor menu/menu-item cleanups and lambda refactor (clock pause). Fix King.movePiece to call the King constructor with proper argument order/flags. Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>